<resources>
    <string name="app_name">Prognosis</string>
    <string name="forecast_list_item_imageview_description">This image mirrors the weather condition.</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_label">Wind</string>
    <string name="pref_location_default">Cologne</string>
    <string name="pref_location_key">location_preference_key</string>
    <string name="pref_location_label">City name</string>
    <string name="pref_enable_gps_search_key">gps_search</string>
    <string name="pref_gps_search_label">Device location</string>
    <string name="pref_enable_gps_search_true">Enabled</string>
    <string name="pref_enable_gps_search_false">Disabled</string>
    <string name="pref_notifications_enabled_key">notifications_enabled_key</string>
    <string name="pref_weather_notifications_false">Disabled</string>
    <string name="pref_weather_notifications_true">Enabled</string>
    <string name="pref_weather_notifications_label">Get notified</string>
    <string name="settings">Settings</string>
    <string name="location_not_found_msg">Unable to obtain device location.</string>
    <string name="permission_location_explanation_msg">Need device location to get weather forecast automatically!</string>
    <string name="permission_location_denied">Permission denied. Fetching weather for</string>
    <string name="permission_location_denied_title">Permission denied</string>
    <string name="preference_weather_source_title">Weather Source</string>
    <string name="pref_notification_time_entry_one">3 hours</string>
    <string name="pref_notification_time_entry_two">8 hours</string>
    <string name="pref_notification_time_entry_three">12 hours</string>
    <string name="pref_notification_time_key">amount of time to get notified</string>
    <string name="pref_notification_time_label">Every</string>
    <string name="pref_weather_notifications_title">Notifications</string>
    <string name="weather_notification_channel_name">Weather Notifications</string>
    <string name="error_title">Sorry for that</string>
    <string name="reload">Reload</string>
    <string name="error_msg">We could not provide you with a weather forecast. It might be your internet connection or a server fault. Hit reload to give a new try.</string>
</resources>
