<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_weather_source_title">
        <EditTextPreference
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:key="@string/pref_location_key"
            android:singleLine="true"
            android:title="@string/pref_location_label" />

        <CheckBoxPreference
            android:defaultValue="@bool/gps_search_by_default"
            android:key="@string/pref_enable_gps_search_key"
            android:summaryOff="@string/pref_enable_gps_search_false"
            android:summaryOn="@string/pref_enable_gps_search_true"
            android:title="@string/pref_gps_search_label" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_weather_notifications_title">
        <CheckBoxPreference
            android:defaultValue="@bool/weather_notifications_by_default"
            android:key="@string/pref_weather_notifications_search_key"
            android:summaryOff="@string/pref_weather_notifications_false"
            android:summaryOn="@string/pref_weather_notifications_true"
            android:title="@string/pref_weather_notifications_label" />
        <ListPreference
            android:defaultValue="@string/pref_notification_time_entry_three"
            android:entries="@array/pref_notification_time_options"
            android:entryValues="@array/pref_notification_time_values"
            android:key="@string/pref_notification_time_key"
            android:title="@string/pref_notification_time_label" />
    </PreferenceCategory>




</PreferenceScreen>