<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/detail_accent_pane_background">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

    <TextView
        android:id="@+id/humidity_label"
        style="@style/DetailLabel"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/humidity_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/humidity"
        app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Humidity measurement -->
    <TextView
        android:id="@+id/humidity"
        style="@style/ExtraWeatherMeasurement"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="38%" />

    <!-- Pressure label -->
    <TextView
        android:id="@+id/pressure_label"
        style="@style/DetailLabel"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/pressure_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/pressure"
        app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Pressure measurement -->
    <TextView
        android:id="@+id/pressure"
        style="@style/ExtraWeatherMeasurement"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/humidity"
        tools:text="995 hPa" />

    <!-- Wind label -->
    <TextView
        android:id="@+id/wind_label"
        style="@style/DetailLabel"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/wind_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/wind_measurement"
        app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Wind measurement -->
    <TextView
        android:id="@+id/wind_measurement"
        style="@style/ExtraWeatherMeasurement"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/pressure"
        tools:text="4km/h NW" />
</android.support.constraint.ConstraintLayout>